增加了几种OOM的情况